Actualización desarrollo preguntas 2, 3 y 4

--- a/Pregunta 4.ipynb
+++ b/Pregunta 4.ipynb
@@ -1077,7 +1077,7 @@
    "source": [
     "Los dos últimos modelos entrenados poseen resultados muy similares, ambos superando al original por un amplio margen. Se puede apreciar también que la red que utilizó los autoencoders tiene marginalmente mejor desempeño que la última entrenada, por lo que se puede concluir que utilizando *transfer learning* el beneficio está en el tiempo reducido para entrenar estas redes, al costo de obtener una red menos especializada.\n",
     "\n",
-    "Se destaca esto último, pues en el caso de tener un conjunto de entrenamiento suficientemente grande para la tarea a la mano (como clasificar imágenes en un número distinto de clases) se podría obtener un mejor desempeño, sin embargo la posibilidad de tener a mano este set de datos es una dificultad que puede ser sorteada con *transfer learning*."
+    "Se destaca esto último, pues en el caso de tener un conjunto de entrenamiento suficientemente grande para la tarea a la mano (como clasificar imágenes en un número distinto de clases) se podría obtener un mejor desempeño, sin embargo la posibilidad de tener a mano este set de datos es una dificultad que puede ser sorteada utilizando modelos previamente entrenados de manera extensiva, como lo es VGG16."
    ]
   },
   {
@@ -1091,7 +1091,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El ejemplo que entrega el enunciado permite el entrenamiento de las últimas 4 capas."
+    "El ejemplo que entrega el enunciado permite el entrenamiento de las últimas 4 capas de VGG16."
    ]
   },
   {
