--- a/Pregunta 2.ipynb
+++ b/Pregunta 2.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -1907,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2028,7 +2028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2602,7 +2602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2610,7 +2610,7 @@
      "output_type": "stream",
      "text": [
       "----- Generating with seed: \" war never changes \"\n",
-      " war never changes have as operation , a statement . afghan and kirouripy british elections that earlier thooming consemvated rush for 1 % of the nextsparting mission for the . non-grouss fait home in jenulace , the root the matter to play scores togational tehas ria 's economic expressions were accoud . the king american northy killing on a detention of the prohects of russia 's vitro centtresses were researed od b"
+      " war never changes at the top some detinisting in u.n. department of a senior people and several ameracci could create an inipential are bburancing law voters was held in labelatis on energy sats betant forcings at the official good opening which u.s. on the dumanian president leading in china 's presidential election reconsider his spread of air to the eneggo survey for nearly a proseculation , which is curtely . a"
      ]
     }
    ],
@@ -2635,28 +2635,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El comportamiento anterior se explica con el método de elección de letras, la función *predict_next_char* selecciona la letra utilizando las probabilidades entregadas por el modelo, por lo que es posible generar palabras con letras improbables, manteniendo cierta consistencia."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se define una función que selecciona solamente la letra con mayor probabilidad de aparecer."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_next_char2(model, sentence, diversity=1.0):\n",
+    "    \"\"\"Predict the next character from the current one\"\"\"    \n",
+    "    x_pred = [char_indices[null_character]]+[char_indices[char] for char in sentence]\n",
+    "    x_pred = sequence.pad_sequences([x_pred], maxlen=maxlen+1,padding='pre',value=char_indices[null_character])\n",
+    "    preds = model.predict(x_pred, verbose=0)[0]\n",
+    "    maxVal=.0\n",
+    "    index=0\n",
+    "    for i in range(len(preds)):\n",
+    "        if(preds[i]>maxVal):\n",
+    "            maxVal=preds[i]\n",
+    "            index=i\n",
+    "    next_index = index\n",
+    "    return indices_char[next_index]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Luego se genera el texto."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----- Generating with seed: \"this is so sad, alexa play despacito \"\n",
-      "this is so sad, alexa play despacito ammittstists that caunted the eight stride . recent yanglo of gasami . afghanistan . the srynmoract team and television on lyanabush . hospital quisto hospitan , the femule terrorisn almion presented as control of the attack . the u.s. led boats up fallahi a killing entered the mosques were forced in o6d than 1h5 attack and are of it will tly beegate . in addisian accounts to governments are peesi"
+      "----- Generating with seed: \"war never changes \"\n",
+      "war never changes and the protest of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests "
      ]
     }
    ],
    "source": [
-    "sentence = \"this is so sad, alexa play despacito \"\n",
+    "sentence = \"war never changes \"\n",
     "print('----- Generating with seed: \"' + sentence + '\"')\n",
     "sys.stdout.write(sentence)\n",
     "for i in range(400):\n",
-    "    next_char = predict_next_char(model, sentence)\n",
+    "    next_char = predict_next_char2(model, sentence)\n",
     "    sentence = sentence[1:] + next_char \n",
     "    sys.stdout.write(next_char)\n",
     "    sys.stdout.flush()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Debido a la falta de aleatoridad en la elección de la letra, el modelo fácilmente cae en el error de reproducir la misma línea de texto de manera indefinida, es decir, un loop infinito. Esto sucede con palabras seguidas de conjunciones (that, the, etc), pues como estas conectan distintos tipos de palabras, la posibilidad de que aparezcan es bastante alta.\n",
+    "\n",
+    "Como observación adicional, este modo de generación de texto no comete errores ortográficos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Generating with seed: \"harambe is in heaven \"\n",
+      "harambe is in heaven are the first time the army since 1999 , and the protest of the country 's president 's political prisoners . the u.s. military says the protest of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests of the protests"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"harambe is in heaven \"\n",
+    "print('----- Generating with seed: \"' + sentence + '\"')\n",
+    "sys.stdout.write(sentence)\n",
+    "for i in range(400):\n",
+    "    next_char = predict_next_char2(model, sentence)\n",
+    "    sentence = sentence[1:] + next_char \n",
+    "    sys.stdout.write(next_char)\n",
+    "    sys.stdout.flush()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al igual que cualquier máquina determinista, existiendo un loop para cierto input, una vez que entra en él, es imposible salir. Sobretodo para tareas como generación de texto, es muy fácil generar este tipo de loops en base a las probabilidades debido a la estructura sintáctica de los textos."
    ]
   },
   {
