Corrección de faltas ortográficas

--- a/Pregunta 1.ipynb
+++ b/Pregunta 1.ipynb
@@ -914,7 +914,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Ahora, determinaremos el parámetro del número de bloques para la red LSTM de la pregunta e). Dado que utilizar 5-fold cross validation nos podría tomar un tiempo considerable, como hemos aprendido de la tarea anterior, utilizaremos la porción del dataser que no ha sido utilizada ni como entrenamiento ni como pruebas (esto es, desde el índice 2000 hacia adelante) como conjunto fijo de validación."
+        "Ahora, determinaremos el parámetro del número de bloques para la red LSTM de la pregunta e). Dado que utilizar 5-fold cross validation nos podría tomar un tiempo considerable, como hemos aprendido de la tarea anterior, utilizaremos la porción del dataset que no ha sido utilizada ni como entrenamiento ni como pruebas (esto es, desde el índice 2000 hacia adelante) como conjunto fijo de validación."
       ]
     },
     {
