Más correcciones ortográficas

--- a/Pregunta 1.ipynb
+++ b/Pregunta 1.ipynb
@@ -591,7 +591,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Tal como en el caso de la curva de entrenamiento, la curva producto de las predicciones de la red obtenidas del set de prueba es increíblemetne similar a la curva original, mostrando sólo algunas diferencias en las variaciones de temperatura a lo largo del eje temporal. Estos gráficos nos permiten apreciar de mejor forma la medida cuantitativa de error RMSE que calculamos en el punto anterior, y a concluir que la red efectivamente realiza predicciones adecuadas en base a los datos de entrenamiento y de pruebas."
+        "Tal como en el caso de la curva de entrenamiento, la curva producto de las predicciones de la red obtenidas del set de prueba es increíblemente similar a la curva original, mostrando sólo algunas diferencias en las variaciones de temperatura a lo largo del eje temporal. Estos gráficos nos permiten apreciar de mejor forma la medida cuantitativa de error RMSE que calculamos en el punto anterior, y a concluir que la red efectivamente realiza predicciones adecuadas en base a los datos de entrenamiento y de pruebas."
       ]
     },
     {
@@ -1313,7 +1313,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Tal como en el punto anterior, la información que entrega el gráfico de pérdida por epoch para cada valor de Lag en estudio no es suficiente para brindar una conclusión clara por sí sola, sino que se debe complementar con la información de error RMSE por cada lag. En efecto, esta última información se condice con lo que muestra este gráfico, en donde un aumento de la cantidad de datos utilizados para realizar las predicciones (un aumento del lag) lleva a tener pérdidas más bajas en la red, siendo la red con las pérdidas bás bajas la que utiliza un Lag igual a 4."
+        "Tal como en el punto anterior, la información que entrega el gráfico de pérdida por epoch para cada valor de Lag en estudio no es suficiente para brindar una conclusión clara por sí sola, sino que se debe complementar con la información de error RMSE por cada lag. En efecto, esta última información se condice con lo que muestra este gráfico, en donde un aumento de la cantidad de datos utilizados para realizar las predicciones (un aumento del lag) lleva a tener pérdidas más bajas en la red, siendo la red con las pérdidas más bajas la que utiliza un Lag igual a 4."
       ]
     },
     {
